--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
             }
         }
 
-        stage('Docker Login & Build Image') {
+        stage('Deploy') {
             steps {
                 sh   """
                     docker run -d -p 500:8080 alielhabal70/backhouse:latest
